# universes

./: .nvimrc  CHANGELOG.md  cabal.project  universes.cabal
abel/: README.md  abel.cabal
abel/src/Data/Monoid/: CMM.hs
abel/src/Data/Semigroup/: Abelian.hs  Additive.hs  Bitwise.hs  Handed.hs  Multiplicative.hs
naturals/: naturals.cabal
naturals/src/Data/: Nat.hs
naturals/src/Data/Nat/: Internal.hs
semirigs/: semirigs.cabal
semirigs/src/Data/: Semirig.hs  Semiring.hs
semirigs/src/Data/Semirig/: Bottleneck.hs
src/Data/: Nat.hs  Relationship.hs  Semirig.hs  Semiring.hs  Yoneda.hs
src/Data/Monoid/: Commutative.hs
src/Data/Monoid/Commutative/: Free.hs
src/Data/Nat/: Internal.hs
src/Data/Ord/: Pre.hs
src/Data/Semigroup/: Abelian.hs  Bitwise.hs  GCD.hs  Intersectional.hs  LCM.hs
src/Data/Semirig/: Free.hs
src/Data/Semiring/: Free.hs
universes/: README.md  universes.cabal
universes/src/Data/: Semiring.hs
universes/src/Data/Nat/: Internal.hs
universes/src/Data/Semiring/: Zhegalkin.hs
