cabal-version:      3.0
name:               universes
version:            1.0
synopsis:           The two universes growing out of semirings.
description:        A description will, one day, go here.
homepage:           https://github.com/kozross/universes
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/kozross/universes/issues
copyright:          (C) Koz Ross 2021
category:           Data
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.1
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

-- Common section

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies

  default-language: Haskell2010

-- Library

library
  import:          lang
  exposed-modules:
    Data.Monoid.Commutative
    Data.Monoid.Commutative.Free
    Data.Nat
    Data.Nat.Internal
    Data.Ord.Pre
    Data.Relationship
    Data.Semigroup.Bitwise
    Data.Semigroup.GCD
    Data.Semigroup.Intersectional
    Data.Semigroup.LCM
    Data.Semirig
    Data.Semirig.Free
    Data.Semiring

  build-depends:
    , base        >=4.12    && <5
    , containers  >=0.6.0.1 && <0.7.0.0
    , witherable  ^>=0.4.1

  hs-source-dirs:  src
