cabal-version:      3.0
name:               abel
version:            1.0
synopsis:           A useful notion of commutativity.
description:
  Defines a constructive notion of commutativity based on factoring. This notion
  is designed for semigroups, but propagates to stronger structures

homepage:           https://github.com/kozross/universes
license:            Apache-2.0
license-file:       LICENSE.md
author:             Koz Ross
maintainer:         koz.ross@retro-freedom.nz
bug-reports:        https://github.com/kozross/universes/issues
copyright:          (C) Koz Ross 2021
category:           Data
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.1
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md

-- Common section

common lang
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints
    -Wmissing-export-lists -Wmissing-deriving-strategies

  default-language: Haskell2010

-- Library

library
  import:          lang
  exposed-modules:
    Data.Semigroup.Abelian
    Data.Semigroup.Additive
    Data.Semigroup.Bitwise
    Data.Semigroup.Handed
    Data.Semigroup.Intersectional

  build-depends:
    , base        >=4.12    && <5
    , containers  >=0.6.0.1 && <0.7.0.0
    , these       ^>=1.1.1.1

  hs-source-dirs:  src
